[tool.poetry]
name = "edsteva"
version = "1.0.0"
description = "EDS-TeVa provides a set of tools that aims at characterizing the temporal variability of data induced by the dynamics of the clinical IT system."
authors = ["Adam Remaki <adam.remaki@aphp.fr>", "Vicent Maladiere <vincent.maladiere@aphp.fr>", "Benoit Playe <benoit.playe@aphp.fr>", "Romain Bey <romain.bey@aphp.fr>", "Paul Bernard <paul.bernard@aphp.fr>"]
maintainers = ["Adam Remaki <adam.remaki@aphp.fr>", "Vicent Maladiere <vincent.maladiere@aphp.fr>"]
repository = "https://gitlab.eds.aphp.fr/datasciencetools/edsteva"
documentation = "https://datasciencetools-pages.eds.aphp.fr/edsteva/"

[tool.poetry.dependencies]
python = "~3.7.1"
pyspark = "~2.4.3"
pandas = "^1.3"
altair = "^4.2"
numpy = "<1.20.0" # https://github.com/databricks/koalas/pull/2166
loguru = "^0.6"
ipython = "^7.31.0"
koalas = "^1.8.2"
pgpasslib = "^1.1.0"
psycopg2-binary = "^2.9.3"
pyarrow = ">=0.10, <0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"
ipykernel = "^6.15.3"
nb-black = "^1.0.7"

[tool.poetry.group.docs.dependencies]
pypandoc = "1.7.5"
markdown = "^3.3.4"
mkdocs-autorefs = "^0.4.1"
mkdocs-bibtex = "^2.0.1"
mkdocs-charts-plugin = "^0.0.8"
mkdocs-gen-files = "^0.3.4"
mkdocs-img2fig-plugin = "^0.9.3"
mkdocs-literate-nav = "^0.4.1"
mkdocs-material = "^8.4.0"
mkdocs-section-index = "^0.3.3"
black = "^22.1.0"
termynal = "^0.2.0"
mkdocs-markdown-filter = "^0.1.1"
jinja2 = "<3.1.0"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.8.0"
mknotebooks = "^0.7.1"

[tool.poetry.group.test.dependencies]
flake8 = "^3.0.1"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pyclean = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
