[tool.poetry]
name = "edsteva"
version = "0.2.4"
description = "EDS-TeVa provides a set of tools that aims at modeling the adoption over time and across space of the Electronic Health Records."
authors = ["Adam Remaki <adam.remaki@aphp.fr>", "Vicent Maladiere <vincent.maladiere-ext@aphp.fr>", "Benoit Playe <benoit.playe@aphp.fr>", "Romain Bey <romain.bey@aphp.fr>", "Paul Bernard <paul.bernard@aphp.fr>"]
keywords = ["OMOP", "Data Analysis", "Electronic health record"]
readme = "README.md"
maintainers = ["Adam Remaki <adam.remaki@aphp.fr>", "Vicent Maladiere <vincent.maladiere-ext@aphp.fr>", "Thomas Petit-Jean <thomas.petitjean@aphp.fr>", "Romain Bey <romain.bey@aphp.fr>"]
homepage = "https://github.com/aphp/edsteva"
repository = "https://github.com/aphp/edsteva"
documentation = "https://aphp.github.io/edsteva/latest/"
license = "BSD 3-Clause"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aphp/edsteva/issues"

[tool.poetry.dependencies]
python = "~3.7.1"
pyspark = "~2.4.3"
pandas = "^1.3"
altair = "^5.0"
numpy = "<1.20.0" # https://github.com/databricks/koalas/pull/2166
loguru = "0.7.0"
ipython = "^7.31.0"
koalas = "^1.8.2"
pgpasslib = "^1.1.0"
psycopg2-binary = "^2.9.3"
pyarrow = ">=0.15, <0.17.0"
catalogue = "^2.0.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^2.17.0"
ipykernel = "^6.15.3"
jupyterlab-rise = "0.2.0"
jupyterlab = "^3.0.0"

[tool.poetry.group.docs.dependencies]
pypandoc = "1.7.5"
markdown = "^3.3.4"
mkdocs = "<1.5.0"
mkdocs-autorefs = "0.4.1"
mkdocs-bibtex = "^2.0.1"
mkdocs-charts-plugin = "0.0.9"
mkdocs-gen-files = "0.3.5"
mkdocs-img2fig-plugin = "0.9.3"
mkdocs-literate-nav = "0.4.1"
mkdocs-material = "^9.0.0"
mkdocs-section-index = "0.3.4"
black = "^23.1.0"
termynal = "0.2.0"
mkdocs-markdown-filter = "0.1.1"
jinja2 = "~3.0.0"
mkdocstrings = "0.19.0"
mkdocstrings-python = "0.8.2"
mknotebooks = "0.7.1"
mike = "^1.1.2"

[tool.poetry.group.test.dependencies]
ruff = "0.0.275"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
pylic = "^3.4.0"

[tool.ruff]
select = ["E", "F", "I", "W", "B", "RUF", "NPY", "PD", "ERA", "PTH", "SIM", "RET", "RSE", "T20", "PIE"]
ignore = ["E501", "B006", "B905", "B017", "W605", "RUF001", "RUF013", "NPY002", "PD901", "SIM118", "RET503"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".gitignore",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".pytest_cache",
    ".ipynb_checkpoints",
    "__pycache__",
    "__init__.py",
    "dist",
    "node_modules",
    "venv",
]

[tool.pylic]
safe_licenses = [
  "BSD License",
  "BSD 3-Clause",
  "BSD 3-Clause License",
  "BSD-3-Clause-LBNL",
  "BSD",
  "The Unlicense (Unlicense)",
  "ISC",
  "ISC License (ISCL)",
  "Apache Software License",
  "MIT",
  "MIT License",
  "Python Software Foundation License",
  "Apache License 2.0",
  "http://www.apache.org/licenses/LICENSE-2.0",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "Eclipse Public License 2.0 (EPL-2.0)",
  "GNU Library or Lesser General Public License (LGPL)",
]
unsafe_packages  = ["ypy-websocket"]
ignore_packages = ["pgpasslib"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
